# modelisation

./: CMakeLists.txt  CMakeLists.txt.bak  cours.md  draw_point_set.cpp  point_set_read_xyz.cpp  reconstruction.md
tp1/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.old  cours.md  grid_simplification.cpp  hierarchy_simp.cpp  poisson_reconstruction.cpp  reconstruction.md
tp1/data/: monkey_hierarchy.xyz  monkey_simplified.xyz  out.off  out.xyz  poisson_reconstruction.off
tp2/etu-srcs-01/: Makefile  geom_data.cpp  geom_data.h  main.cpp  main.h  make_primitives.cpp  make_primitives.h  my_project  vef.cpp  vef.h  wavefront_io.cpp  wavefront_io.h
tp2/etu-srcs-01/VEF/: prism_01.vef  prism_shell_01.vef  pyramid_01.vef
